--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,7 +6,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ProfileActivity">
 
-    <!-- Header -->
     <TextView
         android:id="@+id/titleText"
         android:layout_width="match_parent"
@@ -19,7 +18,6 @@
         android:background="#2196F3"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Profile Icon -->
     <ImageView
         android:id="@+id/profileIcon"
         android:layout_width="96dp"
@@ -32,7 +30,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:tint="@android:color/black" />
 
-    <!-- Display Name -->
     <TextView
         android:id="@+id/profileName"
         android:layout_width="wrap_content"
@@ -44,7 +41,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Label My Illust -->
+    <Button
+        android:id="@+id/logoutButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Log out"
+        android:textColor="@android:color/white"
+        android:backgroundTint="#F44336"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="24dp"
+        app:layout_constraintTop_toBottomOf="@id/profileName"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintWidth_percent="0.5" />
+
     <TextView
         android:id="@+id/labelMyIllust"
         android:layout_width="wrap_content"
@@ -52,11 +62,10 @@
         android:text="My Illust"
         android:textSize="16sp"
         android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@id/profileName"
+        app:layout_constraintTop_toBottomOf="@id/logoutButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- RecyclerView -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewMyIllust"
         android:layout_width="0dp"
@@ -68,7 +77,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Bottom Navigation Bar -->
     <LinearLayout
         android:id="@+id/bottomBar"
         android:layout_width="0dp"
